# mr-pokemon-data-flow

./: README.md  README.org  pyproject.toml  samconfig.toml  template.yaml
src/pokemons/: print_pokemons.py  utils.py
