[tool.poetry]
name = "mr-pokemon-data-flow"
version = "0.1.0"
description = ""
authors = ["Maxim Rurenko <mrurenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest-black = "^0.3.12"
pytest = "^6.2.5"
pylint = "^2.11.1"
python-language-server = {extras = ["all"], version = "^0.36.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
